kubernetes/traefik-cert-manager/grafana/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.local.westermanonline.com`)
      kind: Rule
      services:
        - name: grafana
          port: 80
      middlewares:
        - name: default-headers
    - match: Host(`grafana.westermanonline.com`)
      kind: Rule
      services:
        - name: grafana
          port: 80
      middlewares:
        - name: default-headers
  tls:
    secretName: local-westermanonline-com-tls
